--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Krub:wght@300;400;500;600;700&display=swap');
+
+.ql-container.ql-snow {
+    border: none !important;
+    outline: solid 1px #0098FF;
+    border-radius: 7px;
+    font-size: 17px;
+    margin-bottom: 0;
+}
+.ql-toolbar.ql-snow {
+    border: none !important;
+    margin-top: -20px;
+}
+.ql-container.ql-snow:hover {
+    outline: solid 2px #0098FF ;
+}
